crates/popcircles-cli/tests/snapshots/help__grid.snap
---
source: crates/popcircles-cli/tests/help.rs
expression: help_for(path)
---
Raster grid geometry

Usage: popcircles grid [OPTIONS] <COMMAND>

Commands:
  describe  Describe a north-up grid without reading any raster
  help      Print this message or the help of the given subcommand(s)

Options:
      --log-level <LEVEL>  How much to report on stderr: `error`, `warn`, `info` or `debug`. It does not govern the progress meter, which answers how far a run has got rather than what happened [default: info]
  -h, --help               Print help
