crates/popcircles-cli/tests/snapshots/help__smallest-for-share.snap
---
source: crates/popcircles-cli/tests/help.rs
expression: help_for(path)
---
The smallest circle whose population reaches a share of the table's own total

Usage: popcircles smallest-for-share [OPTIONS] --width <WIDTH> --height <HEIGHT> --origin-lat <ORIGIN_LAT> --origin-lon <ORIGIN_LON> --lon-step <LON_STEP> --lat-step <LAT_STEP> --digest <DIGEST> --share <SHARE> --spacing <SPACING>

Options:
      --log-level <LEVEL>        How much to report on stderr: `error`, `warn`, `info` or `debug`. It does not govern the progress meter, which answers how far a run has got rather than what happened [default: info]
      --width <WIDTH>            
      --height <HEIGHT>          
      --origin-lat <ORIGIN_LAT>  
      --origin-lon <ORIGIN_LON>  
      --lon-step <LON_STEP>      
      --lat-step <LAT_STEP>      
      --cache <CACHE>            Both cache files are this path plus a suffix. Under `out/` by default, which is gitignored — a generated table is never committed [default: out/table]
      --decimate <DECIMATE>      Fold every k by k block of cells into one table cell. Must divide both grid dimensions [default: 1]
      --digest <DIGEST>          The digest a build reported, which is what names the table wanted
      --share <SHARE>            The share to reach, in whole percent. A hundred is everyone the table holds
      --spacing <SPACING>        The side, in cells, of the blocks the first level is tiled into. It changes how long the search takes and not what it answers: tiles as wide as one cell are a brute force over every centre, and tiles wide enough that a block's bound covers the globe prune nothing
      --ledger <LEDGER>          The JSON document every probe's maximum is recorded in. Under `out/` beside the cache, which is gitignored [default: out/radii.json]
  -h, --help                     Print help
