crates/popcircles-cli/tests/snapshots/help__table-query.snap
---
source: crates/popcircles-cli/tests/help.rs
expression: help_for(path)
---
Query a cached table for the population of a rectangle, reading it by mmap

Usage: popcircles table query [OPTIONS] --width <WIDTH> --height <HEIGHT> --origin-lat <ORIGIN_LAT> --origin-lon <ORIGIN_LON> --lon-step <LON_STEP> --lat-step <LAT_STEP> --digest <DIGEST>

Options:
      --log-level <LEVEL>        How much to report on stderr: `error`, `warn`, `info` or `debug`. It does not govern the progress meter, which answers how far a run has got rather than what happened [default: info]
      --width <WIDTH>            
      --height <HEIGHT>          
      --origin-lat <ORIGIN_LAT>  
      --origin-lon <ORIGIN_LON>  
      --lon-step <LON_STEP>      
      --lat-step <LAT_STEP>      
      --cache <CACHE>            Both cache files are this path plus a suffix. Under `out/` by default, which is gitignored — a generated table is never committed [default: out/table]
      --decimate <DECIMATE>      Fold every k by k block of cells into one table cell. Must divide both grid dimensions [default: 1]
      --digest <DIGEST>          The digest a build reported, which is what names the table wanted
      --north <NORTH>            
      --south <SOUTH>            
      --west <WEST>              
      --east <EAST>              
  -h, --help                     Print help
