crates/popcircles-cli/tests/snapshots/help__table.snap
---
source: crates/popcircles-cli/tests/help.rs
expression: help_for(path)
---
The summation table and its on-disk cache

Usage: popcircles table [OPTIONS] <COMMAND>

Commands:
  build  Build a summation table from a registered dataset and publish it to the cache
  query  Query a cached table for the population of a rectangle, reading it by mmap
  help   Print this message or the help of the given subcommand(s)

Options:
      --log-level <LEVEL>  How much to report on stderr: `error`, `warn`, `info` or `debug`. It does not govern the progress meter, which answers how far a run has got rather than what happened [default: info]
  -h, --help               Print help
